Fixed search bar overflow and Loading issue where it allowed to scroll content behind while loading

--- a/src/shared/styles/index.css
+++ b/src/shared/styles/index.css
@@ -165,6 +165,34 @@ code {
   font-family: sans-serif;
   margin-top: 30px;
   letter-spacing: 2px;
-  font-weight: 300;
+  font-weight: 500;
   padding-left: 15px;
+  animation: pulse-text 1.5s ease-in-out infinite;
+}
+
+.no-scroll {
+  overflow: hidden;
+  height: 100%;
+}
+
+@keyframes pulse-text {
+
+  0%,
+  100% {
+    opacity: 0.6;
+  }
+
+  50% {
+    opacity: 1;
+  }
+}
+
+
+/* highlight serch icon in navbar */
+.highlight-icon {
+  color: #42A5F5;
+  /* change color */
+  transform: scale(1.2);
+  /* slightly enlarge */
+  transition: all 0.2s ease;
 }
